start of artist edit page
